update env examples, always use same ports

--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,11 @@ NODE_ID=node-a
 #   - port: WebSocket port for frontend client connections
 #   - rpcPort: Port for inter-node RPC communication
 
-# Local development (all nodes on localhost):
+# Local development (all nodes on localhost - need different ports):
 CLUSTER_NODES=node-a:localhost:8741:9741,node-b:localhost:8742:9742,node-c:localhost:8743:9743
 
-# Production example (3 servers):
-# CLUSTER_NODES=node-a:backend1.example.com:8741:9741,node-b:backend2.example.com:8741:9741,node-c:backend3.example.com:8741:9741
+# Production/different servers (can use same port since they're on different machines):
+# CLUSTER_NODES=node-a:server1.example.com:8741:9741,node-b:server2.example.com:8741:9741,node-c:server3.example.com:8741:9741
 
 # 5 servers (more fault tolerance):
 # CLUSTER_NODES=node-a:b1.example.com:8741:9741,node-b:b2.example.com:8741:9741,node-c:b3.example.com:8741:9741,node-d:b4.example.com:8741:9741,node-e:b5.example.com:8741:9741
