--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,11 +4,11 @@
 # The frontend will try these in order with automatic failover.
 # All backend nodes share state via Raft consensus, so any node works.
 
-# Local development (backend running on localhost):
+# Local development (backend running on localhost - need different ports):
 VITE_NODES=ws://localhost:8741/ws,ws://localhost:8742/ws,ws://localhost:8743/ws
 
-# Production example (3 backend servers):
-# VITE_NODES=ws://backend1.example.com:8741/ws,ws://backend2.example.com:8741/ws,ws://backend3.example.com:8741/ws
+# Production/different servers (can use same port since they're on different machines):
+# VITE_NODES=ws://server1.example.com:8741/ws,ws://server2.example.com:8741/ws,ws://server3.example.com:8741/ws
 
 # 5 backend servers:
 # VITE_NODES=ws://b1.example.com:8741/ws,ws://b2.example.com:8741/ws,ws://b3.example.com:8741/ws,ws://b4.example.com:8741/ws,ws://b5.example.com:8741/ws
